--- a/example.tex
+++ b/example.tex
@@ -1,4 +1,4 @@
-\documentclass[a4paper,parskip]{scrarticle}
+\documentclass[a4paper,parskip,12pt]{scrarticle}
 
 \usepackage[ngerman]{babel}
 \usepackage{babel-iast}
