--- a/example.tex
+++ b/example.tex
@@ -6,26 +6,26 @@
 
 \begin{document}
 \begin{otherlanguage}{iast}
-  divi bhūmau tathākāśe bahir-antaś-ca me vibhuḥ /\\
-  yo 'vabhāty-avabhāsātmā tasmai viśvātmane namaḥ // 1.1
+  divi bhūmau tathākāśe bahir antaś ca me vibhuḥ /\\
+  yo 'vabhāty avabhāsātmā ss tasmai viśvātmane namaḥ // 1.1
 
-  ahaṃ baddho vimuktas-syām-iti yasyāsti niścayaḥ /\\
-  nātyantatajjño nātajjñas-so 'smiñ-śāstre 'dhikāravān // 1.2
+  ahaṃ baddho vimuktas syām iti yasyāsti niścayaḥ /\\
+  nātyantatajjño nātajjñas so 'smiñ śāstre 'dhikāravān // 1.2
 
   Vālmīkiḥ:\\
-  kathopāyān-vicāryādau mokṣopāyān-imān-atha /\\
+  kathopāyān vicāryādau mokṣopāyān imān atha /\\
   yo vicārayati prājño na sa bhūyo 'bhijāyate // 1.3
 
-  asmin-rāmāyaṇe nāma kathopāyān-mahāphalān /\\
-  etāṃs-tu prathamaṃ kṛtvā purāham-arimardana // 1.4
+  asmin rāmāyaṇe nāma kathopāyān mahāphalān /\\
+  etāṃs tu prathamaṃ kṛtvā purāham arimardana // 1.4
 
   śiṣyāyāsmai vinītāya bharadvājāya dhīmate /\\
-  ekāgro dattavān-ramyān-maṇīn-abdhir-ivārthine // 1.5
+  ekāgro dattavān ramyān maṇīn abdhir ivārthine // 1.5
 
   tata ete kathopāyā bharadvājena dhīmatā /\\
-  kasmiṃścin-merugahane brahmaṇo 'gra udāhṛtāḥ // 1.6
+  kasmiṃścin merugahane brahmaṇo 'gra udāhṛtāḥ // 1.6
 
-  athāsya tuṣṭo bhagavān-brahmā lokapitāmahaḥ /\\
+  athāsya tuṣṭo bhagavān brahmā lokapitāmahaḥ /\\
   varaṃ putra gṛhāṇeti samuvāca mahāśayaḥ // 1.7
 \end{otherlanguage}
 
