fixed missing letters in whitespace replacement

--- a/babel-iast.sty
+++ b/babel-iast.sty
@@ -3,11 +3,11 @@
 
 % uppercase to lowercase
 \babelprehyphenation{iast}{([AIUṚṜḶḸEOṂḤKGṄCJÑṬḌṆTDNPBMYRLVŚṢSH])}{
-  string = {1|AIUṚṜḶḸEOṂḤKGṄCJÑṬḌṆTDNPBMYRLVŚṢSH|aiuṛṝḷḹeoṃḥkgṅcjñṭḍṇtdnpbmyrlvśṣsh},
+  string = {1|AĀIĪUŪṚṜḶḸEOṂḤKGṄCJÑṬḌṆTDNPBMYRLVŚṢSH|aāiīuūṛṝḷḹeoṃḥkgṅcjñṭḍṇtdnpbmyrlvśṣsh},
 }
 
 % whitespace: supported since babel 3.52
-\babelprehyphenation{iast}{([kgṅcjñṭḍṇtdnpbmyrlvśṣsh])|([aiuṛṝḷḹeokgṅcjñṭḍṇtdnpbmyrlvśṣsh])}{
+\babelprehyphenation{iast}{([kgṅcjñṭḍṇtdnpbmyrlvśṣsh])|([aāiīuūṛṝḷḹeokgṅcjñṭḍṇtdnpbmyrlvśṣsh])}{
   string = {1},
   remove,
   string = {2},
