fixed missing letters in whitespace replacement

--- a/babel-iast.sty
+++ b/babel-iast.sty
@@ -2,7 +2,7 @@
 \babelprovide[import=sa-Deva]{iast}
 
 % uppercase to lowercase
-\babelprehyphenation{iast}{([AIUṚṜḶḸEOṂḤKGṄCJÑṬḌṆTDNPBMYRLVŚṢSH])}{
+\babelprehyphenation{iast}{([AĀIĪUŪṚṜḶḸEOṂḤKGṄCJÑṬḌṆTDNPBMYRLVŚṢSH])}{
   string = {1|AĀIĪUŪṚṜḶḸEOṂḤKGṄCJÑṬḌṆTDNPBMYRLVŚṢSH|aāiīuūṛṝḷḹeoṃḥkgṅcjñṭḍṇtdnpbmyrlvśṣsh},
 }
 
